Nathan Fidelity Feedback alignment issue

--- a/ui.frontend/src/main/webpack/wpi/components/wpi-alert/scss/styles/fidelity-wpi.scss
+++ b/ui.frontend/src/main/webpack/wpi/components/wpi-alert/scss/styles/fidelity-wpi.scss
@@ -124,11 +124,7 @@
             .copy, .button {
                 margin-left: 124px;
             }
-            
-            .button {
-                position: relative;
-                right: 8px;
-            }
+        
         }
     }
 }
